设置页 UI 调整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -720,6 +720,13 @@
             android:windowSoftInputMode="adjustPan|stateHidden">
 
         </activity>
+        <activity
+            android:name=".n.view.panorama.ConnectionActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
     </application>
 
 </manifest>
