--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,11 +269,6 @@
             android:name=".n.view.misc.UpdateActivity"
             android:launchMode="singleTask"
             android:theme="@style/dialog_activity_style" />
-        <activity
-            android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
-            android:configChanges="keyboardHidden|orientation"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
         <!--
             将WXEntryActivity设置为透明 android:theme="@android:style/Theme.Translucent"
             这样就解决了，微信分享成功后，跳转到指定WXEntryActivity，显示微信分享信息，
@@ -314,11 +309,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity xmlns:tools="http://schemas.android.com/tools"
-            android:name="com.facebook.FacebookActivity"
-            android:exported="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            tools:replace="android:theme" />
+        <!--<activity xmlns:tools="http://schemas.android.com/tools"-->
+            <!--android:name="com.facebook.FacebookActivity"-->
+            <!--android:exported="true"-->
+            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
+            <!--tools:replace="android:theme" />-->
         <!--<activity-->
         <!--android:name=".n.view.panorPanoramaCameraActivityment"-->
         <!--android:configChanges="locale|orientation|keyboardHidden"-->
@@ -654,19 +649,20 @@
             android:screenOrientation="portrait"
             android:theme="@style/share_style"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity
-            android:name="${ApplicationId}.WBShareActivity"
-            android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden">
-            <intent-filter>
-                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+        <!--android:name="${ApplicationId}.WBShareActivity"-->
+        <!--<activity-->
+            <!--android:name="com.umeng.socialize.media.WBShareCallBackActivity"-->
+            <!--android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"-->
+            <!--android:launchMode="singleTask"-->
+            <!--android:screenOrientation="portrait"-->
+            <!--android:theme="@style/CamActivityTheme"-->
+            <!--android:windowSoftInputMode="adjustPan|stateHidden">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />-->
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
         <activity
             android:name="com.umeng.facebook.FacebookActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
@@ -748,6 +744,25 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity
+            android:name="com.umeng.socialize.media.WBShareCallBackActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:exported="false"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <activity
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+            android:launchMode="singleTask"
+            android:name="com.sina.weibo.sdk.share.WbShareTransActivity">
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </activity>
+
     </application>
 
 </manifest>
