--- a/gradle.properties
+++ b/gradle.properties
@@ -5,17 +5,19 @@
 #
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-# Default packValue: -Xmx1024m -XX:MaxPermSize=256m
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 #
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Feb 10 09:38:43 CST 2017
-#systemProp.http.proxyHost=127.0.0.1
-#systemProp.http.proxyPort=8080
+#Thu Aug 17 09:04:49 CST 2017
+systemProp.https.proxyPort=8119
+systemProp.http.proxyHost=vps.cylan.com.cn
 org.gradle.jvmargs=-Xmx4608M
 org.gradle.daemon=true
+systemProp.https.proxyHost=vps.cylan.com.cn
 org.gradle.parallel=true
+systemProp.http.proxyPort=8119
 android.useDeprecatedNdk=true
