--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,6 @@ def boolean hasSignKey() {
     return false
 }
 
-
 android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -77,6 +76,16 @@ android {
     }
 
     signingConfigs {
+
+        config {
+            p.load(project.rootProject.file('local.properties').newDataInputStream())
+            storeFile file(p['key.store'])
+            storePassword p['key.store.password']
+            keyPassword p['key.alias.password']
+            keyAlias p['key.alias']
+        }
+
+
         debug {
             v2SigningEnabled true
 //            storeFile file('../debug.keystore')
@@ -84,21 +93,22 @@ android {
 //            keyAlias 'AndroidDebugKey'
 //            keyPassword 'android'
 
-            Properties properties = new Properties()
-            File localProperties = project.rootProject.file('local.properties')
-            if (localProperties.exists()) {
-                properties.load(localProperties.newDataInputStream())
-                def store_file = properties.getProperty('store_file')
-                if (store_file != null) {
-                    def store_pwd = properties.getProperty('store_pwd')
-                    def store_alias = properties.getProperty('store_alias')
-                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
-                    storeFile file(store_file)
-                    storePassword store_pwd
-                    keyAlias store_alias
-                    keyPassword store_alias_pwd
-                }
-            }
+
+//            Properties properties = new Properties()
+//            File localProperties = project.rootProject.file('local.properties')
+//            if (localProperties.exists()) {
+//                properties.load(localProperties.newDataInputStream())
+//                def store_file = properties.getProperty('store_file')
+//                if (store_file != null) {
+//                    def store_pwd = properties.getProperty('store_pwd')
+//                    def store_alias = properties.getProperty('store_alias')
+//                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
+//                    storeFile file(store_file)
+//                    storePassword store_pwd
+//                    keyAlias store_alias
+//                    keyPassword store_alias_pwd
+//                }
+//            }
         }
         release {
             // 满足下面两个条件时需要此配置
@@ -125,6 +135,7 @@ android {
     }
     buildTypes {
         debug {
+            signingConfig signingConfigs.config
         }
         release {
             if (hasSignKey()) {
