--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         jcenter()
 //        maven { url 'https://maven.fabric.io/public' }
+        maven { url "http://objectbox.net/beta-repo/" }
 
     }
     dependencies {
@@ -17,6 +18,7 @@ buildscript {
         //谷歌推送
         classpath 'com.google.gms:google-services:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
+        classpath 'io.objectbox:objectbox-gradle-plugin:0.9.13'
     }
 }
 
