--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,13 +81,13 @@ android {
 
     signingConfigs {
 
-        config {
-            p.load(project.rootProject.file('local.properties').newDataInputStream())
-            storeFile file(p['key.store'])
-            storePassword p['key.store.password']
-            keyPassword p['key.alias.password']
-            keyAlias p['key.alias']
-        }
+//        config {
+//            p.load(project.rootProject.file('local.properties').newDataInputStream())
+//            storeFile file(p['key.store'])
+//            storePassword p['key.store.password']
+//            keyPassword p['key.alias.password']
+//            keyAlias p['key.alias']
+//        }
 
 
         debug {
@@ -95,21 +95,21 @@ android {
 
 
 
-//            Properties properties = new Properties()
-//            File localProperties = project.rootProject.file('local.properties')
-//            if (localProperties.exists()) {
-//                properties.load(localProperties.newDataInputStream())
-//                def store_file = properties.getProperty('store_file')
-//                if (store_file != null) {
-//                    def store_pwd = properties.getProperty('store_pwd')
-//                    def store_alias = properties.getProperty('store_alias')
-//                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
-//                    storeFile file(store_file)
-//                    storePassword store_pwd
-//                    keyAlias store_alias
-//                    keyPassword store_alias_pwd
-//                }
-//            }
+            Properties properties = new Properties()
+            File localProperties = project.rootProject.file('local.properties')
+            if (localProperties.exists()) {
+                properties.load(localProperties.newDataInputStream())
+                def store_file = properties.getProperty('store_file')
+                if (store_file != null) {
+                    def store_pwd = properties.getProperty('store_pwd')
+                    def store_alias = properties.getProperty('store_alias')
+                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
+                    storeFile file(store_file)
+                    storePassword store_pwd
+                    keyAlias store_alias
+                    keyPassword store_alias_pwd
+                }
+            }
         }
         release {
             // 满足下面两个条件时需要此配置
@@ -135,9 +135,9 @@ android {
         }
     }
     buildTypes {
-        debug {
-            signingConfig signingConfigs.config
-        }
+//        debug {
+//            signingConfig signingConfigs.config
+//        }
         release {
             if (hasSignKey()) {
 //                shrinkResources true
