直播界面手动横屏或竖屏逻辑优化,门铃呼叫最近任务键和 Home键 权限弹窗优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -246,7 +246,7 @@
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:excludeFromRecents="true"
             android:keepScreenOn="true"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
