--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android'
 //apply plugin: 'io.objectbox'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.objectbox.android.transform'
-
+apply plugin: 'kotlin-android-extensions'
 //从version.properties中读取versionName
 def vCode
 def vName
