--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -785,10 +785,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-            android:exported="false" />
 
         <activity
-            android:name=".n.view.panorama.LiveSettingActivity" />
+            android:name=".n.view.panorama.LiveSettingActivity"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
