--- a/app/build.gradle
+++ b/app/build.gradle
@@ -381,16 +381,24 @@ dependencies {
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
 
     //youtube rtmp 配置 配置
-    compile 'com.google.android.gms:play-services-auth:10.2.1'
-    compile 'pub.devrel:easypermissions:0.3.0'
-    compile('com.google.api-client:google-api-client-android:1.22.0') {
-        exclude group: 'org.apache.httpcomponents'
+    compile 'com.google.android.gms:play-services-plus:11.0.0'
+    compile 'com.google.android.gms:play-services-auth:11.0.0'
+    compile('com.google.apis:google-api-services-youtube:v3-rev120-1.19.0') {
+        exclude group: 'org.apache.httpcomponents', module: "httpclient"
     }
-    compile('com.google.apis:google-api-services-youtube:v3-rev183-1.22.0') {
-        exclude group: 'org.apache.httpcomponents'
+    compile('com.google.http-client:google-http-client-android:+') {
+        exclude group: 'org.apache.httpcomponents', module: "httpclient"
     }
+    compile('com.google.api-client:google-api-client-android:+') {
+        exclude group: 'org.apache.httpcomponents', module: "httpclient"
+    }
+    compile 'com.google.api-client:google-api-client-gson:+'
+    compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'pub.devrel:easypermissions:0.4.3'
 
     compile 'com.androidkun:XTabLayout:1.1.3'
+    compile 'com.github.worker8:RadioGroupPlus:v1.0.1'
 }
 
 /////////////////编译过滤器/////////////////////////////////
