--- a/app/build.gradle
+++ b/app/build.gradle
@@ -343,19 +343,18 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
-    compile 'com.danikula:videocache:2.6.4'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.danikula:videocache:2.7.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'org.greenrobot:greendao:3.2.0'
-    compile 'com.google.dagger:dagger:2.10'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-design:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.1'
-    compile 'com.google.android.gms:play-services-gcm:10.2.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.google.android.gms:play-services-gcm:+'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
@@ -367,7 +366,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    kapt 'com.google.dagger:dagger-compiler:2.10'
+    kapt 'com.google.dagger:dagger-compiler:2.11'
     compile 'com.mcxiaoke.packer-ng:helper:2.0.0'
     compile 'org.jetbrains.kotlin:kotlin-stdlib:+'
     compile 'org.msgpack:msgpack-core:0.8.13'
@@ -381,8 +380,8 @@ dependencies {
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
 
     //youtube rtmp 配置 配置
-    compile 'com.google.android.gms:play-services-plus:11.0.0'
-    compile 'com.google.android.gms:play-services-auth:11.0.0'
+    compile 'com.google.android.gms:play-services-plus:+'
+    compile 'com.google.android.gms:play-services-auth:+'
     compile('com.google.apis:google-api-services-youtube:v3-rev120-1.19.0') {
         exclude group: 'org.apache.httpcomponents', module: "httpclient"
     }
