--- a/app/build.gradle
+++ b/app/build.gradle
@@ -411,6 +411,7 @@ dependencies {
     compile 'com.androidkun:XTabLayout:1.1.3'
     compile 'com.github.worker8:RadioGroupPlus:v1.0.1'
     compile 'net.openid:appauth:0.7.0'
+    compile 'com.github.promeg:tinypinyin:2.0.1'
 }
 
 /////////////////编译过滤器/////////////////////////////////
