--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         //谷歌推送
-        classpath 'com.google.gms:google-services:3.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
+        classpath 'com.google.gms:google-services:3.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.50"
         classpath "io.objectbox:objectbox-gradle-plugin:$objectBoxVersion"
     }
 }
